[package]
name = "nom-varint"
version = "0.2.1"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Parse varints (used by Celeste, Minecraft, and Protocol buffers) using nom."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leo60228/nom-varint"
repository = "https://github.com/leo60228/nom-varint"

[dependencies]
nom = { version = "5.0.0", default-features = false }
